Se agrego gatito

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 	<H1>Página de Nico</H1>
 	ahora soy senpai :v
 
+	<img src="https://i.ytimg.com/vi/IIjjrsepktA/maxresdefault.jpg">
+
 </body>
 </html>
